fix: remove z-index

--- a/src/elements/map-container/map-container.scss
+++ b/src/elements/map-container/map-container.scss
@@ -84,7 +84,6 @@
   height: calc(100% + var(--sbb-map-container-border-radius));
   overflow: hidden auto;
   position: relative;
-  z-index: 2;
   border-start-end-radius: var(--sbb-map-container-border-radius);
   border-start-start-radius: var(--sbb-map-container-border-radius);
   margin-block-start: calc(var(--sbb-map-container-border-radius) * -1);
@@ -101,9 +100,9 @@
 
 .sbb-map-container__map {
   position: sticky;
+  z-index: -1;
   inset-block-start: 0;
   inset-inline: 0;
-  z-index: 1;
   grid-row: 1 / 2;
   grid-column: 1 / 3;
   height: var(--sbb-map-container-map-height);
